k8sconfig/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: mzq
spec:
  ingressClassName: nginx
  rules:
    - host: www.web-user.com
      http:
        paths:
          - backend:
              service:
                name: web-service
                port:
                  number: 18090
            path: /user
            pathType: Prefix
    - host: www.web-order.com
      http:
        paths:
          - backend:
              service:
                name: web-service
                port:
                  number: 18090
            path: /order
            pathType: Prefix
    - host: www.redis.com
      http:
        paths:
          - backend:
              service:
                name: redis-service
                port:
                  number: 8081
            path: /
            pathType: Prefix
